# cmake-good

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
say-hello/: CMakeLists.txt
say-hello/include/say-hello/: hello.h
say-hello/src/say-hello/: hello.cpp
test/: CMakeLists.txt  example.cpp
